--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "description": "Client for Governance Program Library which is a set of extensions for Solana's spl-governance program.",
     "author": "Solana Maintainers <maintainers@solana.foundation>",
     "license": "MIT",
-    "main": "lib/src/index.js",
+    "main": "dist/index.js",
     "types": "lib/src/index.d.ts",
+    "files": [
+        "dist/**/*"
+    ],
     "repository": "https://github.com/solana-labs/governance-program-library",
     "scripts": {
         "build": "tsc",
@@ -20,12 +23,12 @@
         "@typescript-eslint/parser": "^4.14.2",
         "eslint": "^7.28.0",
         "eslint-config-prettier": "^7.2.0",
+        "mocha": "^9.2.2",
         "prettier": "^2.0.5",
         "ts-mocha": "^9.0.2",
         "ts-node": "^9.1.1",
         "typedoc": "^0.22.5",
-        "typescript": "^4.1.3",
-        "mocha": "^9.2.2"
+        "typescript": "^4.1.3"
     },
     "publishConfig": {
         "access": "public"
@@ -37,6 +40,5 @@
     "dependencies": {
         "@project-serum/anchor": "^0.24.2",
         "@project-serum/serum": "^0.13.61"
-
     }
 }
