--- a/programs/nft-voter/Cargo.toml
+++ b/programs/nft-voter/Cargo.toml
@@ -18,8 +18,8 @@ default = []
 
 [dependencies]
 arrayref = "0.3.6"
-anchor-lang = { git = "https://github.com/dedmonkes/anchor", features = ["init-if-needed"] }
-anchor-spl = {git = "https://github.com/dedmonkes/anchor"}
+anchor-lang = "0.25.0"
+anchor-spl = "0.25.0"
 itertools = "0.10.2"
 mpl-token-metadata = { version = "1.3.1", features = ["no-entrypoint"] }
 solana-program = "1.9.13"
