--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "@solana/governance-program-library",
+    "name": "@dedmonkes/governance-program-library",
     "version": "0.16.3",
     "description": "Client for Governance Program Library which is a set of extensions for Solana's spl-governance program.",
     "author": "Solana Maintainers <maintainers@solana.foundation>",
     "license": "MIT",
     "main": "dist/index.js",
-    "types": "lib/src/index.d.ts",
+    "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
-    "repository": "https://github.com/solana-labs/governance-program-library",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dedmonkes/governance-program-library.git"
+      },
     "scripts": {
         "build": "tsc",
         "clean": "rm -rf dist",
@@ -31,14 +34,14 @@
         "typescript": "^4.1.3"
     },
     "publishConfig": {
-        "access": "public"
+        "@dedmonkes:registry": "https://npm.pkg.github.com"
     },
     "prettier": {
         "singleQuote": true,
         "trailingComma": "all"
     },
     "dependencies": {
-        "@project-serum/anchor": "^0.24.2",
+        "@project-serum/anchor": "^0.25.0",
         "@project-serum/serum": "^0.13.61"
     }
 }
