--- a/programs/nft-voter/Cargo.toml
+++ b/programs/nft-voter/Cargo.toml
@@ -22,8 +22,8 @@ anchor-lang = "0.25.0"
 anchor-spl = "0.25.0"
 itertools = "0.10.2"
 mpl-token-metadata = { version = "1.3.1", features = ["no-entrypoint"] }
+spl-governance = {git= "https://github.com/dedmonkes/solana-program-library", features = ["no-entrypoint"]}
 solana-program = "1.10.29"
-spl-governance = { version = "2.2.2", features = ["no-entrypoint"] }
 spl-governance-tools=  "0.1.2"
 
 [dev-dependencies]
